--- a/ar/index.html
+++ b/ar/index.html
@@ -18,7 +18,7 @@
                     src="assets/asset.gif"
                     look-at="[gps-camera]"
                     scale="1 1 1"
-                    gps-entity-place="latitude: 52.411753494053045; longitude: 13.413219594376391;"
+                    gps-entity-place="latitude: latitude; longitude: longitude;"
                 ></a-image>
 
             <a-camera gps-camera rotation-reader></a-camera>
