--- a/ar/index.html
+++ b/ar/index.html
@@ -18,7 +18,7 @@
                     src="assets/asset.gif"
                     look-at="[gps-camera]"
                     scale="1 1 1"
-                    gps-entity-place="latitude: latitude; longitude: longitude;"
+                    gps-entity-place="latitude: 52.40717618530922; longitude: 13.405052136629337;"
                 ></a-image>
 
             <a-camera gps-camera rotation-reader></a-camera>
