--- a/ar/index.html
+++ b/ar/index.html
@@ -18,7 +18,7 @@
                     src="assets/asset.gif"
                     look-at="[gps-camera]"
                     scale="1 1 1"
-                    gps-entity-place="latitude: lat; longitude: lon;"
+                    gps-entity-place="latitude: 52.411753633020645; longitude: 13.413216180870108;"
                 ></a-image>
 
             <a-camera gps-camera rotation-reader></a-camera>
