--- a/ar/index.html
+++ b/ar/index.html
@@ -10,7 +10,7 @@
     <a-camera gps-camera rotation-reader></a-camera>
 
     <a-box 
-      gps-entity-place="latitude: 52.5200; longitude: 13.4050" 
+      gps-entity-place="latitude: 52.41175395034357; longitude: 13.41320411954018" 
       material="color: red;" 
       scale="5 5 5"
     ></a-box>
