--- a/ar/index.html
+++ b/ar/index.html
@@ -1,27 +1,115 @@
-<!doctype html>
-<html>
-    <head>
-        <meta charset="utf-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
-        <script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
-        <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
-    </head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Geofence Check</title>
+    <style>
+        body {
+            font-family: sans-serif;
+            padding: 2rem;
+            text-align: center;
+            background: #f4f4f4;
+            color: #333;
+        }
+        h1 {
+            font-size: 1.5rem;
+            margin-bottom: 1rem;
+        }
+        #status {
+            margin-top: 1rem;
+            font-size: 1.1rem;
+        }
+        button {
+            margin: 1rem auto;
+            padding: 1rem 2rem;
+            font-size: 1rem;
+            border: none;
+            border-radius: 10px;
+            background-color: #4caf50;
+            color: white;
+            cursor: pointer;
+        }
+        button.secondary {
+            background-color: #777;
+        }
+    </style>
+</head>
+<body>
 
-    <body style="margin: 0; overflow: hidden;">
-        <a-scene
-            embedded
-            loading-screen="enabled: false;"
-            arjs="sourceType: webcam; debugUIEnabled: false;"
-        >
-                <a-image
-                    src="assets/asset.gif"
-                    look-at="[gps-camera]"
-                    scale="1 1 1"
-                    gps-entity-place="latitude: lat; longitude: lon;"
-                ></a-image>
+<h1>Geofence Check</h1>
+<div id="status">Getting your location...</div>
+<button onclick="checkLocation()">Check Again</button>
+<button class="secondary" onclick="skipLocation()">Skip Location Check</button>
 
-            <a-camera gps-camera rotation-reader></a-camera>
-        </a-scene>
-    </body>
+<script>
+    const query = new URLSearchParams(window.location.search);
+    const game = query.get("game");
+    const question = query.get("question");
+    const configUrl = "checkpoints.json";
+
+    let currentCheckpoint = null;
+
+    function getDistanceFromLatLon(lat1, lon1, lat2, lon2) {
+        const R = 6371e3;
+        const φ1 = lat1 * Math.PI / 180;
+        const φ2 = lat2 * Math.PI / 180;
+        const Δφ = (lat2 - lat1) * Math.PI / 180;
+        const Δλ = (lon2 - lon1) * Math.PI / 180;
+        const a = Math.sin(Δφ / 2) ** 2 +
+            Math.cos(φ1) * Math.cos(φ2) *
+            Math.sin(Δλ / 2) ** 2;
+        const c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a));
+        return R * c;
+    }
+
+    async function loadCheckpoint() {
+        const res = await fetch(configUrl);
+        const data = await res.json();
+        currentCheckpoint = data?.[game]?.[question];
+        if (!currentCheckpoint) {
+            document.getElementById("status").innerText = "Invalid game or question.";
+            return;
+        }
+        checkLocation();
+    }
+
+    function checkLocation() {
+        document.getElementById("status").innerText = "Getting your location...";
+        navigator.geolocation.getCurrentPosition(
+            (pos) => {
+                const lat = pos.coords.latitude;
+                const lng = pos.coords.longitude;
+                const dist = getDistanceFromLatLon(lat, lng, currentCheckpoint.lat, currentCheckpoint.lng);
+                const rounded = Math.round(dist);
+                if (dist <= currentCheckpoint.radius) {
+                    document.getElementById("status").innerText = `Success! You're within ${rounded} meters. Redirecting...`;
+                    setTimeout(() => {
+                        window.location.href = currentCheckpoint.next;
+                    }, 2000);
+                } else {
+                    document.getElementById("status").innerText = `You're ${rounded} meters away. Try moving closer and click "Check Again".`;
+                }
+            },
+            (err) => {
+                document.getElementById("status").innerText = "Location access denied or failed.";
+            },
+            {
+                enableHighAccuracy: true,
+                timeout: 10000
+            }
+        );
+    }
+
+    function skipLocation() {
+        if (currentCheckpoint?.next) {
+            window.location.href = currentCheckpoint.next;
+        } else {
+            document.getElementById("status").innerText = "Cannot skip. No next link found.";
+        }
+    }
+
+    loadCheckpoint();
+</script>
+
+</body>
 </html>
