--- a/ar/index.html
+++ b/ar/index.html
@@ -33,6 +33,9 @@
             background-color: #777;
         }
     </style>
+    <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
+    <!-- include ar.js -->
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
 </head>
 <body>
 
@@ -40,6 +43,8 @@
 <div id="status">Getting your location...</div>
 <button onclick="checkLocation()">Check Again</button>
 <button class="secondary" onclick="skipLocation()">Skip Location Check</button>
+<!-- include aframe -->
+<!-- with location based, use aframe v0.9.2 -->
 
 <script>
     const query = new URLSearchParams(window.location.search);
@@ -131,7 +136,7 @@
             value="This content will always face you."
             look-at="[gps-camera]"
             scale="120 120 120"
-            gps-entity-place="latitude: <add-your-latitude>; longitude: <add-your-longitude>;"
+            gps-entity-place="latitude: ${lat}; longitude: ${lng};"
           ></a-text>
           <a-camera gps-camera rotation-reader> </a-camera>
         </a-scene>
