--- a/ar/index.html
+++ b/ar/index.html
@@ -138,18 +138,10 @@
           //   scale="120 120 120"
           //   gps-entity-place="latitude: ${lat}; longitude: ${lng};"
           // ></a-text>
-          <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"             look-at="[gps-camera]"
-            scale="120 120 120"
-            gps-entity-place="latitude: ${lat}; longitude: ${lng};></a-box>
-          <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"             look-at="[gps-camera]"
-            scale="120 120 120"
-            gps-entity-place="latitude: ${lat}; longitude: ${lng};></a-sphere>
-          <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"             look-at="[gps-camera]"
-            scale="120 120 120"
-            gps-entity-place="latitude: ${lat}; longitude: ${lng};></a-cylinder>
-          <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"             look-at="[gps-camera]"
-            scale="120 120 120"
-            gps-entity-place="latitude: ${lat}; longitude: ${lng};></a-plane>
+          <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9" look-at="[gps-camera]" scale="120 120 120" gps-entity-place="latitude: ${lat}; longitude: ${lng};"></a-box>
+          <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E" look-at="[gps-camera]" gps-entity-place="latitude: ${lat}; longitude: ${lng};"></a-sphere>
+          <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D" look-at="[gps-camera]" gps-entity-place="latitude: ${lat}; longitude: ${lng};"></a-cylinder>
+          <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4" look-at="[gps-camera]" gps-entity-place="latitude: ${lat}; longitude: ${lng};"></a-plane>
           <a-sky color="#ECECEC"></a-sky>
           <a-camera gps-camera rotation-reader> </a-camera>
         </a-scene>
