--- a/ar/index.html
+++ b/ar/index.html
@@ -129,8 +129,13 @@
         document.body.innerHTML = `
         <body>
         <a-scene vr-mode-ui="enabled: false" arjs="sourceType: webcam; videoTexture: true; debugUIEnabled: false;">
-            <a-box color="red" position="0 2 -5" rotation="0 45 45" scale="2 2 2" look-at="[gps-camera]" gps-entity-place="latitude: ${lat}; longitude: ${lng};"></a-box>
             <a-camera gps-camera rotation-reader> </a-camera>
+            <a-entity
+                gltf-model="https://cdn.jsdelivr.net/gh/KhronosGroup/glTF-Sample-Models@master/2.0/Cube/glTF-Binary/Cube.glb"
+                gps-entity-place="latitude: ${lat}; longitude: ${lng};"
+                scale="10 10 10"
+                animation="property: rotation; to: 0 360 0; loop: true; dur: 6000"
+          ></a-entity>
         </a-scene>
       </body>
         `
